<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010 Inside Secure, All Rights Reserved. Licensed under 
	the Apache License, Version 2.0 (the "License"); you may not use this file 
	except in compliance with the License. You may obtain a copy of the License 
	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable 
	law or agreed to in writing, software distributed under the License is distributed 
	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
	express or implied. See the License for the specific language governing permissions 
	and limitations under the License. -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="open_nfc_service_controller">This application allows to start / stop the Open
		NFC service.</string>
	<string name="start_service">Start service</string>
	<string name="stop_service">Stop service</string>
	<string name="default_ip_address">172.17.11.65</string>
	<string name="nfc_hal_prompt">Choose the NFC HAL implementation</string>
	<string name="remote_ip_prompt">Specify the address of the Connection Center</string>
	<string-array name="devices_array">
		<item>Microread NFC controller</item>
		<item>NFC Controller simulator</item>
	</string-array>

	<string name="permlab_hardware"></string>
	<string name="permdesc_hardware">Allows the application to access
		to the NFC
		controller hardware. This is required to perform operations
		such as RF
		lock, firmware update... </string>

	<string name="permlab_reader"></string>
	<string name="permdesc_reader">Allows the application to access
		to the NFC
		controller reader functionalities. This is required to
		detect, read or
		write tags... </string>

	<string name="permlab_card"></string>
	<string name="permdesc_card">Allows the application to access
		to the NFC
		controller card emulation functionalities. This is required
		to emulate
		a ISO-A / ISO-B tag </string>

	<string name="permlab_p2p"></string>
	<string name="permdesc_p2p">Allows the application to access
		to the NFC
		controller P2P functionnalities. This is required to
		establish P2P
		communications with other devices</string>

	<string name="bind_service">Bind Service</string>
	<string name="unbind_service">Unbind Service</string>
	<string name="local_service_connected">Connected to local service</string>
	<string name="local_service_disconnected">Disconnected from local service</string>

	<string name="app_name">Nfc Service</string>
	<string name="nfcUserLabel">Nfc</string>
</resources>

