<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010 Inside Secure, All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="4dip"
	android:gravity="center_horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView
		android:paddingTop="4dip"
		android:paddingBottom="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:text="@string/open_nfc_service_controller"/>

	<TextView
		android:paddingBottom="4dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"

		android:text="@string/nfc_hal_prompt"/>

	<Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/nfc_hal_prompt"
    />

	<TextView
		android:paddingTop="10dip"
		android:paddingBottom="4dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
	
		android:text="@string/remote_ip_prompt"/>

	<EditText android:id="@+id/edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:paddingBottom="10dip"
		android:inputType="textUri"
		android:persistent="true"
		android:text="@string/default_ip_address"/>

	<TableLayout

		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="*"
		android:paddingTop="10dip">

		<TableRow>

		<Button android:id="@+id/start"
			android:layout_height="wrap_content"
			android:text="@string/start_service">

			<requestFocus />
		</Button>

		<Button android:id="@+id/stop"
			android:layout_height="wrap_content"
			android:text="@string/stop_service">
		</Button>

	</TableRow>

</TableLayout>

</LinearLayout>

